# litex-soc-icesugar-rust

./: .gitmodules  README.md
app/: Cargo.toml  memory.x
app/src/: main.rs  print.rs  timer.rs
demo/: .gitignore  Makefile  crt0.d  donut.d  helloc.d  main.d
icesugar-pac/: Cargo.toml  icesugar.svd
icesugar-pac/src/: generic.rs  lib.rs
soc/: icesugar.svd
soc/targets/: muselab_icesugar.py
